src/test/deca/context/invalid/improvided/decl_var_doubleDef.deca
{
   // Description : 
   //  Test d'une double définition.
   //
   // Résultats:
   // Erreur Contextuelle
   // Ligne 7: Double definition of your symbol. 
   int x;
   int x;
}
